--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <section id="main">
       <table class="table table-striped">
         <tr>
-          <th><label>First Name</label></th>
-          <th><label>Last Name</label></th>
-          <th><label>Email</label></th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Email</th>
           <th></th>
         </tr>
         
