restrict email input

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           {{input type="text" id="new-last" placeholder="Last Name" value=newLastName action="createUser"}}
           </td>
           <td>
-          {{input type="text" id="new-email" placeholder="Email" value=newEmail action="createUser"}}
+          {{input type="email" id="new-email" placeholder="Email" value=newEmail action="createUser"}}
           </td>
           <td></td>
         </tr>
